--- a/subgraphs/exchange.yaml
+++ b/subgraphs/exchange.yaml
@@ -30,7 +30,7 @@ dataSources:
           file: ../abis/BEP20SymbolBytes.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
-          handler: handleNewPair
+          handler: handlePairCreated
 templates:
   - kind: ethereum/contract
     name: Pair
