--- a/subgraphs/profile.yaml
+++ b/subgraphs/profile.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
-description: DEX trades candles (5m/15m/1h/4h/1d/1w)
-repository: https://github.com/pancakeswap/pancake-subgraph
+description: Pancake Profile
+repository: https://github.com/pancakeswap
 schema:
   file: ./profile.graphql
 dataSources:
@@ -15,15 +15,26 @@ dataSources:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
-      file: ../src/profile/user.ts
+      file: ../src/profile/profile.ts
       entities:
         - User
+        - Team
         - Points
       abis:
         - name: Profile
           file: ../abis/profile.json
       eventHandlers:
+        - event: TeamAdd(uint256,string)
+          handler: handleTeamAdd
+        - event: TeamPointIncrease(indexed uint256,uint256,indexed uint256)
+          handler: handleTeamPointIncrease
         - event: UserNew(indexed address,uint256,address,uint256)
-          handler: handleNewUser
+          handler: handleUserNew
+        - event: UserPause(indexed address,uint256)
+          handler: handleUserPause
+        - event: UserReactivate(indexed address,uint256,address,uint256)
+          handler: handleUserReactivate
+        - event: UserChangeTeam(indexed address,uint256,uint256)
+          handler: handleUserChangeTeam
         - event: UserPointIncrease(indexed address,uint256,indexed uint256)
-          handler: handleIncreasePoint
+          handler: handleUserPointIncrease
