--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "codegen:blocks": "graph codegen subgraphs/blocks.yaml",
     "codegen:dexcandles": "graph codegen subgraphs/dexcandles.yaml",
     "codegen:exchange": "graph codegen subgraphs/exchange.yaml",
+    "codegen:exchange-lite": "graph codegen subgraphs/exchange-lite.yaml",
     "codegen:profile": "graph codegen subgraphs/profile.yaml",
     "codegen:timelock": "graph codegen subgraphs/timelock.yaml",
     "build:blocks": "graph build subgraphs/blocks.yaml",
     "build:dexcandles": "graph build subgraphs/dexcandles.yaml",
     "build:exchange": "graph build subgraphs/exchange.yaml",
+    "build:exchange-lite": "graph build subgraphs/exchange-lite.yaml",
     "build:profile": "graph build subgraphs/profile.yaml",
     "build:timelock": "graph build subgraphs/timelock.yaml",
     "deploy:blocks": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/blocks subgraphs/blocks.yaml",
     "deploy:dexcandles": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/dex-candles subgraphs/dexcandles.yaml",
     "deploy:exchange": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange subgraphs/exchange.yaml",
+    "deploy:exchange-lite": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-lite subgraphs/exchange-lite.yaml",
     "deploy:profile": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/profile subgraphs/profile.yaml",
     "deploy:timelock": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/timelock subgraphs/timelock.yaml",
     "format": "prettier --write '*/**/*.{js,ts}'",
