feat(exchange-lite): Token USD eq

--- a/subgraphs/exchange-lite.yaml
+++ b/subgraphs/exchange-lite.yaml
@@ -43,6 +43,7 @@ templates:
       language: wasm/assemblyscript
       file: ../src/exchange-lite/pair.ts
       entities:
+        - Bundle
         - Pair
         - Token
       abis:
