--- a/subgraphs/exchange/subgraph.yaml
+++ b/subgraphs/exchange/subgraph.yaml
@@ -22,12 +22,12 @@ dataSources:
       abis:
         - name: Factory
           file: ./abis/Factory.json
-        - name: BEP20
-          file: ./abis/BEP20.json
-        - name: BEP20NameBytes
-          file: ./abis/BEP20NameBytes.json
-        - name: BEP20SymbolBytes
-          file: ./abis/BEP20SymbolBytes.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: ERC20NameBytes
+          file: ./abis/ERC20NameBytes.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handlePairCreated
