--- a/subgraphs/farm-auctions/subgraph.yaml
+++ b/subgraphs/farm-auctions/subgraph.yaml
@@ -5,11 +5,11 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: FarmAuctions
+    name: FarmAuction
     network: bsc
     source:
       address: '0xb92Ab7c1edcb273AbA24b0656cEb3681654805D2'
-      abi: FarmAuctions
+      abi: FarmAuction
       startBlock: 9678443
     mapping:
       kind: ethereum/events
@@ -20,12 +20,16 @@ dataSources:
         - Auction
         - Bidder
       abis:
-        - name: FarmAuctions
-          file: ./abis/FarmAuctions.json
+        - name: FarmAuction
+          file: ./abis/FarmAuction.json
       eventHandlers:
         - event: WhitelistAdd(indexed address)
           handler: handleWhitelistAdd
         - event: WhitelistRemove(indexed address)
           handler: handleWhitelistRemove
+        - event: AuctionStart(indexed uint256,uint256,uint256,uint256,uint256)
+          handler: handleAuctionStart
+        - event: AuctionClose(indexed uint256,uint256,uint256)
+          handler: handleAuctionClose
         - event: AuctionBid(indexed uint256,indexed address,uint256)
           handler: handleAuctionBid
