--- a/subgraphs/nft-market/package.json
+++ b/subgraphs/nft-market/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "collectible-market",
-  "description": "PancakeSwap Collectible Market Subgraph",
+  "name": "nft-market",
+  "description": "PancakeSwap NFT Market Subgraph",
   "version": "1.0.0",
   "repository": "git@github.com:pancakeswap/pancake-subgraph.git",
   "author": "PancakeSwap",
@@ -8,6 +8,6 @@
   "scripts": {
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/collectible-market subgraph.yaml"
+    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/nft-market subgraph.yaml"
   }
 }
