--- a/subgraphs/nft-market/subgraph.yaml
+++ b/subgraphs/nft-market/subgraph.yaml
@@ -10,7 +10,7 @@ dataSources:
     source:
       address: "0x0000000000000000000000000000000000000000" # To be updated
       abi: ERC721NFTMarketV1
-      startBlock: 10000000 # To be updated
+      startBlock: 11981905 # To be updated
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -20,6 +20,7 @@ dataSources:
         - Collection
         - NFT
         - User
+        - AskOrder
         - Transaction
       abis:
         - name: ERC721NFTMarketV1
