--- a/subgraphs/pottery/subgraph.yaml
+++ b/subgraphs/pottery/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: Pottery
     network: bsc
     source:
-      address: '0x371894c4373855FCA5C006fbc77AcA754CF60a77'
+      address: '0xCf06eD0Ff78e930eDe6ef9E1B937524d33121815'
       abi: PotteryDraw
-      startBlock: 18904519
+      startBlock: 19507426
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -22,11 +22,9 @@ dataSources:
         - name: PotteryDraw
           file: ./abis/PancakeSwapPotteryDraw.json
       eventHandlers:
-        - event: ClaimReward(indexed address,uint256,uint256,uint256)
-          handler: handleClaimReward
         - event: CloseDraw(indexed uint256,indexed address,indexed uint256,address[],uint256,address)
           handler: handleCloseDraw
-        - event: CreatePottery(indexed address,uint256,uint256,uint256,address,address)
+        - event: CreatePottery(indexed address,uint256,uint256,uint256,uint256,address)
           handler: handleCreatePottery
         - event: StartDraw(indexed uint256,indexed address,indexed uint256,uint256,uint256,address)
           handler: handleStartDraw
@@ -47,8 +45,6 @@ templates:
         - name: PancakeSwapPotteryVault
           file: ./abis/PancakeSwapPotteryVault.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,uint256)
-          handler: handleApproval
         - event: Deposit(indexed address,indexed address,uint256,uint256)
           handler: handleDeposit
         - event: Lock(indexed address,indexed uint256,uint256)
@@ -57,5 +53,3 @@ templates:
           handler: handleTransfer
         - event: Unlock(indexed address,indexed uint256,uint256,uint256,uint256)
           handler: handleUnlock
-        - event: Withdraw(indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleWithdraw
