--- a/subgraphs/exchange-cake-pairs/package.json
+++ b/subgraphs/exchange-cake-pairs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exchange",
+  "name": "exchange-cake-pairs",
   "description": "PancakeSwap Subgraph",
   "version": "1.0.0",
   "repository": "git@github.com:pancakeswap/pancake-subgraph.git",
