chore(pottery): Add vault lock date

--- a/subgraphs/pottery/abis/PancakeSwapPotteryVault.json
+++ b/subgraphs/pottery/abis/PancakeSwapPotteryVault.json
@@ -693,6 +693,19 @@
     "type": "function"
   },
   {
+    "inputs": [],
+    "name": "maxTotalDeposit",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
     "inputs": [
       {
         "internalType": "address",
