chore(pottery): Add RedeemPrize handler

--- a/subgraphs/pottery/abis/PancakeSwapPotteryDraw.json
+++ b/subgraphs/pottery/abis/PancakeSwapPotteryDraw.json
@@ -193,6 +193,31 @@
     "anonymous": false,
     "inputs": [
       {
+        "indexed": true,
+        "internalType": "address",
+        "name": "vault",
+        "type": "address"
+      },
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "actualPrize",
+        "type": "uint256"
+      },
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "redeemPrize",
+        "type": "uint256"
+      }
+    ],
+    "name": "RedeemPrize",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
         "indexed": false,
         "internalType": "address",
         "name": "admin",
@@ -602,6 +627,13 @@
       }
     ],
     "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "inputs": [],
+    "name": "redeemPrizeByRatio",
+    "outputs": [],
+    "stateMutability": "nonpayable",
     "type": "function"
   },
   {
