--- a/subgraphs/pottery/abis/PancakeSwapPotteryVault.json
+++ b/subgraphs/pottery/abis/PancakeSwapPotteryVault.json
@@ -547,6 +547,19 @@
     "type": "function"
   },
   {
+    "inputs": [],
+    "name": "getMaxTotalDeposit",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
     "inputs": [
       {
         "internalType": "address",
@@ -682,19 +695,6 @@
       }
     ],
     "name": "maxRedeem",
-    "outputs": [
-      {
-        "internalType": "uint256",
-        "name": "",
-        "type": "uint256"
-      }
-    ],
-    "stateMutability": "view",
-    "type": "function"
-  },
-  {
-    "inputs": [],
-    "name": "maxTotalDeposit",
     "outputs": [
       {
         "internalType": "uint256",
