--- a/subgraphs/exchange-stableswap/package.json
+++ b/subgraphs/exchange-stableswap/package.json
@@ -6,7 +6,7 @@
   "author": "PancakeSwap",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "auth": "graph auth --product hosted-service API_KEY",
+    "auth": "graph auth --product hosted-service SUBGRAPH_KEY",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
     "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange-stableswap subgraph.yaml"
