--- a/subgraphs/exchange-stableswap/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: StableSwapFactory
     network: bsc
     source:
-      address: '0x09b7801527b4ff9a2ea6fa0e2f141f0960550534'
+      address: '0x36bbb126e75351c0dfb651e39b38fe0bc436ffd2'
       abi: StableSwapFactory
-      startBlock: 21285302
+      startBlock: 21456598
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -21,6 +21,12 @@ dataSources:
       abis:
         - name: StableSwapFactory
           file: ./abis/StableSwapFactory.json
+        - name: StableSwapPair
+          file: ./abis/StableSwapPair.json
+        - name: Factory
+          file: ./abis/Factory.json
+        - name: Pair
+          file: ./abis/Pair.json
         - name: ERC20
           file: ./abis/ERC20.json
         - name: ERC20NameBytes
@@ -40,14 +46,21 @@ templates:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
-      file: ./mappings/stableSwapPair.ts
+      file: ./mappings/stableSwapPairV2.ts
       entities:
         - Pair
+        - Mint
+        - Burn
+        - Transaction
       abis:
         - name: StableSwapFactory
           file: ./abis/StableSwapFactory.json
         - name: StableSwapPair
           file: ./abis/StableSwapPair.json
+        - name: Factory
+          file: ./abis/Factory.json
+        - name: Pair
+          file: ./abis/Pair.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -57,3 +70,24 @@ templates:
           handler: handleRemoveLiquidityOne
         - event: TokenExchange(indexed address,uint256,uint256,uint256,uint256)
           handler: handleTokenExchange
+  - kind: ethereum/contract
+    name: ERC20
+    network: bsc
+    source:
+      abi: ERC20
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./mappings/transfer.ts
+      entities:
+        - Pair
+        - Mint
+        - Burn
+        - Transaction
+      abis:
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
