--- a/subgraphs/linked-pool/subgraph.yaml
+++ b/subgraphs/linked-pool/subgraph.yaml
@@ -21,6 +21,8 @@ dataSources:
       abis:
         - name: PancakeSwapMMPool
           file: ./abis/PancakeSwapMMPool.json
+        - name: ERC20
+          file: ./abis/ERC20.json
       eventHandlers:
         - event: Swap(uint256,indexed address,indexed address,address,address,address,uint256,uint256)
           handler: handleSwap
