--- a/subgraphs/linked-pool/subgraph.yaml
+++ b/subgraphs/linked-pool/subgraph.yaml
@@ -23,6 +23,8 @@ dataSources:
           file: ./abis/PancakeSwapMMPool.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: ERC20SymbolBytes
+          file: ./abis/ERC20SymbolBytes.json
       eventHandlers:
         - event: Swap(uint256,indexed address,indexed address,address,address,address,uint256,uint256)
           handler: handleSwap
