--- a/subgraphs/exchange-stableswap/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: StableSwapFactory
     network: bsc
     source:
-      address: '0x36bbb126e75351c0dfb651e39b38fe0bc436ffd2'
+      address: "0x36bbb126e75351c0dfb651e39b38fe0bc436ffd2"
       abi: StableSwapFactory
       startBlock: 21456598
     mapping:
@@ -61,6 +61,8 @@ templates:
           file: ./abis/Factory.json
         - name: Pair
           file: ./abis/Pair.json
+        - name: ERC20
+          file: ./abis/ERC20.json
       eventHandlers:
         - event: AddLiquidity(indexed address,uint256[2],uint256[2],uint256,uint256)
           handler: handleAddLiquidity
@@ -70,6 +72,10 @@ templates:
           handler: handleRemoveLiquidityOne
         - event: TokenExchange(indexed address,uint256,uint256,uint256,uint256)
           handler: handleTokenExchange
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleAdminWithdraw
+      blockHandlers:
+        - handler: handleBlock
   - kind: ethereum/contract
     name: ERC20
     network: bsc
