--- a/subgraphs/exchange-stableswap/subgraph.yaml
+++ b/subgraphs/exchange-stableswap/subgraph.yaml
@@ -3,14 +3,17 @@ description: PancakeSwap is a decentralized protocol for automated token exchang
 repository: https://github.com/pancakeswap
 schema:
   file: ./schema.graphql
+graft:
+  base: QmeDXgvaLdeC1hTm7izxnZ943nS7oo9DTxZDzhr92Mrh1E
+  block: 25535650 # for previous exiting factory
 dataSources:
   - kind: ethereum/contract
     name: StableSwapFactory
     network: bsc
     source:
-      address: '0x36bbb126e75351c0dfb651e39b38fe0bc436ffd2'
+      address: '0x25a55f9f2279A54951133D503490342b50E5cd15'
       abi: StableSwapFactory
-      startBlock: 21456598
+      startBlock: 25535650
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -34,7 +37,7 @@ dataSources:
         - name: ERC20SymbolBytes
           file: ./abis/ERC20SymbolBytes.json
       eventHandlers:
-        - event: NewStableSwapPair(indexed address,indexed address,indexed address)
+        - event: NewStableSwapPair(indexed address,address,address,address,address)
           handler: handlePairCreated
 templates:
   - kind: ethereum/contract
