feat: Add template

--- a/subgraphs/exchange-v3/bsc-lite/subgraph.yaml
+++ b/subgraphs/exchange-v3/bsc-lite/subgraph.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
-description: Uniswap is a decentralized protocol for automated token exchange on Ethereum.
-repository: https://github.com/Uniswap/uniswap-v3-subgraph
+description: PancakeSwap is a decentralized protocol for automated token exchange on Binance Smart Chain.
+repository: https://github.com/pancakeswap/pancake-subgraph
 schema:
   file: ./schema.graphql
 graft:
