--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "mustache": "^4.2.0",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@graphprotocol/graph-cli": "^0.21.0",
