--- a/subgraphs/exchange-v3/template/subgraph.yaml
+++ b/subgraphs/exchange-v3/template/subgraph.yaml
@@ -1,21 +1,18 @@
 specVersion: 0.0.2
-description: Uniswap is a decentralized protocol for automated token exchange on Ethereum.
-repository: https://github.com/Uniswap/uniswap-v3-subgraph
+description: PancakeSwap is a decentralized protocol for automated token exchange on Binance Smart Chain.
+repository: https://github.com/pancakeswap/pancake-subgraph
 schema:
   file: ./schema.graphql
-graft:
-  base: QmPrb5mvZj3ycUugZgwLWCvK93jfXfhvfjRXrFk4tRmyCX
-  block: 14292820
 features:
   - nonFatalErrors
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: mainnet
+    network: goerli
     source:
-      address: '0x1F98431c8aD98523631AE4a59f267346ea31F984'
+      address: "0x6e906fc1d75c9559e4e8b0f1fa002c4a9724988f"
       abi: Factory
-      startBlock: 12369621
+      startBlock: 8534961
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -40,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: mainnet
+    network: goerli
     source:
-      address: '0xC36442b4a4522E871399CD717aBDD847Ab11FE88'
+      address: "0x09c65bc891bf39daf771e85f2203b898402ff3cf"
       abi: NonfungiblePositionManager
-      startBlock: 12369651
+      startBlock: 8535119
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -74,7 +71,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: mainnet
+    network: goerli
     source:
       abi: Pool
     mapping:
