--- a/subgraphs/linked-pool/subgraph.yaml
+++ b/subgraphs/linked-pool/subgraph.yaml
@@ -6,11 +6,16 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: PancakeSwapMMPool
-    network: mainnet
+#    network: mainnet
+#    source:
+#      address: '0x9Ca2A439810524250E543BA8fB6E88578aF242BC'
+#      abi: PancakeSwapMMPool
+#      startBlock: 16568654
+    network: bsc
     source:
-      address: '0x9Ca2A439810524250E543BA8fB6E88578aF242BC'
+      address: '0xfEACb05b373f1A08E68235bA7FC92636b92ced01'
       abi: PancakeSwapMMPool
-      startBlock: 16568654
+      startBlock: 25949098
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
