--- a/subgraphs/masterchef-v3/subgraph.yaml
+++ b/subgraphs/masterchef-v3/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: MasterChefV3
-    network: goerli
+    network: chapel
     source:
-      address: "0x085e5E3a68e4E912E0bb3f5A242B808AB97EF5Cd"
+      address: "0x1b453f8113426e750dcbf82799d32019f39fac5f"
       abi: MasterChefV3
-      startBlock: 8535307
+      startBlock: 27842121
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -21,7 +21,7 @@ dataSources:
         - Pool
         - User
         - UserPosition
-        - Token
+        # - Token
       abis:
         - name: MasterChefV3
           file: ./abis/MasterChefV3.json
@@ -40,8 +40,6 @@ dataSources:
           handler: handleWithdraw
         - event: UpdateLiquidity(indexed address,indexed uint256,indexed uint256,int128,int24,int24)
           handler: handleUpdateLiquidity
-        - event: Burn(indexed address,indexed uint256,indexed uint256)
-          handler: handleBurn
         - event: AddPool(indexed uint256,uint256,indexed address,indexed address)
           handler: handleAddPool
         - event: SetPool(indexed uint256,uint256)
