--- a/subgraphs/exchange-v3/lite/subgraph.yaml
+++ b/subgraphs/exchange-v3/lite/subgraph.yaml
@@ -1,5 +1,5 @@
 specVersion: 0.0.2
-description: PancakeSwap is a decentralized protocol for automated token exchange on Binance Smart Chain.
+description: PancakeSwap is a multi-chain decentralized exchange and automated market maker protocol.
 repository: https://github.com/pancakeswap/pancake-subgraph
 schema:
   file: ./schema.graphql
