--- a/subgraphs/exchange-v3/template/package.json
+++ b/subgraphs/exchange-v3/template/package.json
@@ -12,6 +12,8 @@
     "build": "graph build subgraph.yaml",
     "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/e-chapel subgraph.yaml",
     "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/e-goerli subgraph.yaml",
-    "deploy:chapel": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/e-chapel subgraph.yaml"
+    "deploy:chapel": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/e-chapel subgraph.yaml",
+    "deploy:eth": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/exchange-v3-eth subgraph.yaml",
+    "deploy:bnb": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/exchange-v3-bnb subgraph.yaml"
   }
 }
