--- a/subgraphs/masterchef-v3/package.json
+++ b/subgraphs/masterchef-v3/package.json
@@ -10,6 +10,8 @@
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
     "deploy:chapel": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/masterchef-v3-chapel subgraph.yaml",
-    "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/masterchef-v3-goerli subgraph.yaml"
+    "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/masterchef-v3-goerli subgraph.yaml",
+    "deploy:eth": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/masterchef-v3-eth subgraph.yaml",
+    "deploy:bnb": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ chef-jojo/masterchef-v3-bnb subgraph.yaml"
   }
 }
