--- a/subgraphs/exchange-v3/template/tsconfig.json
+++ b/subgraphs/exchange-v3/template/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  // "extends": "../../../tsconfig.json",
   "compilerOptions": {
+    "types": ["@graphprotocol/graph-ts"],
     "strict": false,
     "strictNullChecks": false
   }
