--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "./node_modules/@graphprotocol/graph-ts/tsconfig.json",
+  "extends": "@graphprotocol/graph-ts/tsconfig",
   "compilerOptions": {
     "types": ["@graphprotocol/graph-ts"],
-    "strictNullChecks": false
+    "strict": false,
+    "strictNullChecks": false,
   }
 }
